--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@types/react-leaflet": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^51.0.1",
     "jsonc-eslint-parser": "^2.4.0",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
